--- a/HeroicSamples.PassingDataFromAspNetCoreToAngular/appsettings.json
+++ b/HeroicSamples.PassingDataFromAspNetCoreToAngular/appsettings.json
@@ -3,5 +3,9 @@
     "LogLevel": {
       "Default": "Warning"
     }
-  }
+  },
+  "CustomerSettings": {
+    "ClientName": "Widgets R Us",
+    "DefaultPage": "home"
+  } 
 }
